refactor: 전면 리팩토링 및 README 업데이트
- Entity: Lombok, @Table, Builder 적용, Sticker 보완
- 공통 ApiResponse, GlobalExceptionHandler, 커스텀 예외 추가
- JWT 로그아웃 블랙리스트 검사 버그 수정
- Service/Controller: @RequiredArgsConstructor, 예외 위임
- build.gradle 정리, settings.gradle → memory-of-year
- README: 팀 멋삼핑 크레딧, ERD(Mermaid), 프로젝트 구조 반영
- TestDatabaseConnection(하드코딩 비밀번호) 제거